# CPP-Playground

./: .gitignore  CMakeLists.txt  README.md
bitshifts/: CMakeLists.txt  main.cxx  main.cxx~
coarse_mesh_builder/: CMakeLists.txt  main.cxx
composition_base_interface/: CMakeLists.txt  composition_base_interface.cxx
cpp_modules/: .gitignore  CMakeLists.txt  build_modules.sh  module_math.cpp  module_math.cppm
fe_orientiation_permutation_issue/: CMakeLists.txt  conformity.cc  fe_conformty_test.hpp  fill_vector_random.hpp  output  test_mesh.hpp
h_div_issue_on_shells/: CMakeLists.txt  grid.h  issue.cc  shape_fun_scalar.hpp  shape_fun_vector.hpp  test_mesh.h
iterators/: CMakeLists.txt
p4est-find-partition/: CMakeLists.txt  p4est-find-partition.cxx
periodicity/: CMakeLists.txt  main.cxx
step-20-modified/: CMakeLists.txt  data.hpp  step-20.cc
step-20-modified-nedelec_complex/: CMakeLists.txt  step-20.cc
step-20-test/: CMakeLists.txt  step20_3D.cpp
